--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Lior Bragilevsky",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   },
