--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "mongoose": "^5.10.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
