--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Lior Bragilevsky",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongoose": "^5.10.2",
